Added Features to Video Page

--- a/video.html
+++ b/video.html
@@ -25,11 +25,14 @@
             font-weight: bold;
         }
         
-        h1,
-        h2,
-        p {
+        h1,h2,p {
             font-family: 'Josefin Sans', sans-serif!important;
         }
+        
+        .video{
+            margin-bottom: 25px;
+        }
+
     </style>
 </head>
 
@@ -58,7 +61,74 @@
             </div>
         </nav>
     </header>
-
+    <h1 id="level"> There Are Some Exciting Videos For You </h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+            <div class="col-lg-6 video">
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
