--- a/video.html
+++ b/video.html
@@ -65,69 +65,69 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
             <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
-            </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM" frameborder="0"></iframe>
+                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
             </div>
         </div>
+    </div>
+    <div class="footer" style="color: white;">
+        Copyright © 2020 SPARK, Inc. All rights reserved.
     </div>
 </body>
 
