--- a/video.html
+++ b/video.html
@@ -25,7 +25,7 @@
             font-weight: bold;
         }
         
-        h1,h2,p {
+        .footer,h1,h2,p,span {
             font-family: 'Josefin Sans', sans-serif!important;
         }
         
@@ -61,72 +61,24 @@
             </div>
         </nav>
     </header>
-    <h1 id="level"> There Are Some Exciting Videos For You </h1>
+    <h1 class="level" style="margin-top: 80px;"> Choose Subject For Videos </h1>
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
+            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12">
+                <button class="button" onclick="window.open('mathvideo.html','_self')"><span>MATHEMATICS</span></button>
             </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
+            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12">
+                <button class="button" onClick="window.open('sciencevideo.html','_self')"><span>SCIENCE</span></button>
             </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
+            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12">
+                <button class="button" onclick="window.open('#','_self')"><span>ENGLISH</span></button>
             </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
-            </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
-            </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
-            </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
-            </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
-            </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
-            </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
-            </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
-            </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
-            </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
-            </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
-            </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
-            </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
-            </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
-            </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
-            </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
-            </div>
-            <div class="col-lg-6 video">
-                <iframe width="100%" height="305" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1" frameborder="0"></iframe>
+            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12">
+                <button class="button" onclick="window.open('#','_self')"><span>G.K.</span></button>
             </div>
         </div>
     </div>
-    <div class="footer" style="color: white;">
+    <div class="footer" style="color: white; margin-top: 80px;">
         Copyright © 2020 SPARK, Inc. All rights reserved.
     </div>
 </body>
