Modified Video.html Final and mathvideo.html

--- a/video.html
+++ b/video.html
@@ -20,6 +20,15 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="video.css">
     <style>
+        
+        body 
+        {
+            background-image: url('videoback.jpg');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+        }
+
         a {
             margin-right: 20px;
             font-weight: bold;
