Modified Video.html Final, mathvideo.html and sciencevideo.html

--- a/mathvideo.html
+++ b/mathvideo.html
@@ -6,7 +6,7 @@
         <meta name="description" content="">
         <link rel="shortcut icon" href="favicon.ico" />
 
-        <title>S P A R K : Video</title>
+        <title>S P A R K : Math-Video</title>
 
         <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/carousel/">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -74,7 +74,7 @@
                 </div>
             </nav>
         </header>
-        <h1 class="level" style="margin-top: 80px;"> Choose Subject For Videos </h1>
+        <h1 class="level" style="margin-top: 80px;"> Here Are Some Math Videos </h1>
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
