Modified Video Portal

--- a/video.html
+++ b/video.html
@@ -80,10 +80,10 @@
                 <button class="button" onClick="window.open('sciencevideo.html','_self')"><span>SCIENCE</span></button>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12">
-                <button class="button" onclick="window.open('#','_self')"><span>ENGLISH</span></button>
+                <button class="button" onclick="window.open('Englishvideo.html','_self')"><span>ENGLISH</span></button>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12">
-                <button class="button" onclick="window.open('#','_self')"><span>G.K.</span></button>
+                <button class="button" onclick="window.open('Gkvideo.html','_self')"><span>G.K.</span></button>
             </div>
         </div>
     </div>
