--- a/Gkvideo.html
+++ b/Gkvideo.html
@@ -6,7 +6,7 @@
         <meta name="description" content="">
         <link rel="shortcut icon" href="favicon.ico" />
 
-        <title>S P A R K : Math-Video</title>
+        <title>S P A R K : G.K-Video</title>
 
         <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/carousel/">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -74,36 +74,36 @@
                 </div>
             </nav>
         </header>
-        <h1 class="level" style="margin-top: 80px;"> Here Are Some Math Videos </h1>
+        <h1 class="level" style="margin-top: 80px;"> Here Are Some General Knowledge Videos </h1>
         <div class="container">
             <div class="row">
               <div class="col-lg-4 col-md-4 col-12">
                 <div class="sub">
-                    <h2 class="level" style="margin-top:20px;">Addition</h2>
+                    <h2 class="level" style="margin-top:20px;">Topic 1</h2>
                 </div>
                     <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                     <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                    <h2 class="level" style="margin-top:20px;">Shapes & Space</h2>
+                    <h2 class="level" style="margin-top:20px;">Topic 4</h2>
                     <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                     <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                   <div class="sub">
-                      <h2 class="level" style="margin-top:20px;">Substraction</h2>
+                      <h2 class="level" style="margin-top:20px;">Topic 2</h2>
                   </div>
                       <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                       <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                      <h2 class="level" style="margin-top:20px;">Measurement</h2>
+                      <h2 class="level" style="margin-top:20px;">Topic 5</h2>
                       <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                       <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                   </div> 
                   <div class="col-lg-4 col-md-4 col-12">
                     <div class="sub">
-                        <h2 class="level" style="margin-top:20px;">Multiplycation</h2>
+                        <h2 class="level" style="margin-top:20px;">Topic 3</h2>
                     </div>
                         <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                         <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                        <h2 class="level" style="margin-top:20px;">Data Handaling</h2>
+                        <h2 class="level" style="margin-top:20px;">Topic 6</h2>
                         <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                         <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                     </div>        
