--- a/sciencevideo.html
+++ b/sciencevideo.html
@@ -77,21 +77,36 @@
         <h1 class="level" style="margin-top: 80px;"> Here Are Some Science Videos </h1>
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+              <div class="col-lg-4 col-md-4 col-12">
+                <div class="sub">
+                    <h2 class="level" style="margin-top:20px;">Topic 1</h2>
+                </div>
+                    <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                    <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                    <h2 class="level" style="margin-top:20px;">Topic 4</h2>
+                    <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                     <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                 </div>
-                <div class="col-lg-6">
-                    <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                </div>
-                <div class="col-lg-6">
-                    <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                </div>
-                <div class="col-lg-6">
-                    <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                </div>
-                <div class="col-lg-6">
-                    <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                </div>
+                <div class="col-lg-4 col-md-4 col-12">
+                  <div class="sub">
+                      <h2 class="level" style="margin-top:20px;">Topic 2</h2>
+                  </div>
+                      <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                      <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                      <h2 class="level" style="margin-top:20px;">Topic 5</h2>
+                      <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                      <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                  </div> 
+                  <div class="col-lg-4 col-md-4 col-12">
+                    <div class="sub">
+                        <h2 class="level" style="margin-top:20px;">Topic 3</h2>
+                    </div>
+                        <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                        <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                        <h2 class="level" style="margin-top:20px;">Topic 6</h2>
+                        <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                        <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                    </div>        
             </div>
         </div>
         <div class="footer" style="color: white; margin-top: 80px;">
