--- a/mathvideo.html
+++ b/mathvideo.html
@@ -81,31 +81,31 @@
                 <div class="sub">
                     <h2 class="level" style="margin-top:20px;">Addition</h2>
                 </div>
-                    <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                    <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                    <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                    <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                     <h2 class="level" style="margin-top:20px;">Shapes & Space</h2>
-                    <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                    <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                    <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                    <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                   <div class="sub">
                       <h2 class="level" style="margin-top:20px;">Substraction</h2>
                   </div>
-                      <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                      <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                      <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                      <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                       <h2 class="level" style="margin-top:20px;">Measurement</h2>
-                      <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                      <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                      <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                      <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                   </div> 
                   <div class="col-lg-4 col-md-4 col-12">
                     <div class="sub">
                         <h2 class="level" style="margin-top:20px;">Multiplycation</h2>
                     </div>
-                        <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                        <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                        <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                        <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                         <h2 class="level" style="margin-top:20px;">Data Handaling</h2>
-                        <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                        <iframe width="100%" height="308" frameborder="0" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                        <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                        <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                     </div>        
             </div>
         </div>
