Fixed Border-Color Issue

--- a/mathvideo.html
+++ b/mathvideo.html
@@ -23,9 +23,6 @@
             *{
                 color:black!important;
             }
-            h1{
-                border:2px solid black!important;
-            }
             body{
                 background-color: #f3e0be!important;
             }
@@ -34,7 +31,7 @@
                 margin-right: 20px;
                 font-weight: bold;
             }
-            
+
             .footer,h1,h2,p,span {
                 font-family: 'Josefin Sans', sans-serif!important;
             }
@@ -74,7 +71,7 @@
                 </div>
             </nav>
         </header>
-        <h1 class="level" style="margin-top: 80px;"> Here Are Some Math Videos </h1>
+        <h1 class="level"> Here Are Some Math Videos </h1>
         <div class="container">
             <div class="row">
               <div class="col-lg-4 col-md-4 col-12">
