--- a/video.html
+++ b/video.html
@@ -29,6 +29,11 @@
             background-size: cover;
         }
 
+        .level
+        {
+            border:2px solid #ffffff!important;
+        }
+
         a {
             margin-right: 20px;
             font-weight: bold;
