Fixed Margin and Padding Issues in Video Sections

--- a/video.html
+++ b/video.html
@@ -32,6 +32,7 @@
         .level
         {
             border:2px solid #ffffff!important;
+            margin-top: 50px!important;
         }
 
         a {
