--- a/Englishvideo.html
+++ b/Englishvideo.html
@@ -39,13 +39,6 @@
                 font-family: 'Josefin Sans', sans-serif!important;
             }
             
-            .video{
-                margin-bottom: 25px;
-            }
-
-            .col-lg-6{
-                margin-bottom: 20px;
-            }
         </style>
     </head>
 
@@ -77,7 +70,7 @@
         <h1 class="level" style="margin-top: 80px;"> Here Are Some English Videos </h1>
         <div class="container">
             <div class="row">
-              <div class="col-lg-4 col-md-4 col-12">
+              <div class="col-lg-4 col-md-4 col-12 video">
                 <div class="sub">
                     <h2 class="level" style="margin-top:20px;">Topic 1</h2>
                 </div>
@@ -87,7 +80,7 @@
                     <iframe width="100%" height="308" frameborder="0"  allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                     <iframe width="100%" height="308" frameborder="0"  allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                 </div>
-                <div class="col-lg-4 col-md-4 col-12">
+                <div class="col-lg-4 col-md-4 col-12 video">
                   <div class="sub">
                       <h2 class="level" style="margin-top:20px;">Topic 2</h2>
                   </div>
@@ -97,7 +90,7 @@
                       <iframe width="100%" height="308" frameborder="0"  allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                       <iframe width="100%" height="308" frameborder="0"  allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                   </div> 
-                  <div class="col-lg-4 col-md-4 col-12">
+                  <div class="col-lg-4 col-md-4 col-12 video">
                     <div class="sub">
                         <h2 class="level" style="margin-top:20px;">Topic 3</h2>
                     </div>
