--- a/mathvideo.html
+++ b/mathvideo.html
@@ -36,13 +36,6 @@
                 font-family: 'Josefin Sans', sans-serif!important;
             }
             
-            .video{
-                margin-bottom: 25px;
-            }
-
-            .col-lg-6{
-                margin-bottom: 20px;
-            }
         </style>
     </head>
 
@@ -74,7 +67,7 @@
         <h1 class="level"> Here Are Some Math Videos </h1>
         <div class="container">
             <div class="row">
-              <div class="col-lg-4 col-md-4 col-12">
+              <div class="col-lg-4 col-md-4 col-12 video">
                 <div class="sub">
                     <h2 class="level" style="margin-top:20px;">Addition</h2>
                 </div>
@@ -84,7 +77,7 @@
                     <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                     <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                 </div>
-                <div class="col-lg-4 col-md-4 col-12">
+                <div class="col-lg-4 col-md-4 col-12 video">
                   <div class="sub">
                       <h2 class="level" style="margin-top:20px;">Substraction</h2>
                   </div>
@@ -94,7 +87,7 @@
                       <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                       <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                   </div> 
-                  <div class="col-lg-4 col-md-4 col-12">
+                  <div class="col-lg-4 col-md-4 col-12 video">
                     <div class="sub">
                         <h2 class="level" style="margin-top:20px;">Multiplycation</h2>
                     </div>
