--- a/mathvideo.html
+++ b/mathvideo.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-12 video">
                   <div class="sub">
-                      <h2 class="level" style="margin-top:20px;">Substraction</h2>
+                      <h2 class="level" style="margin-top:20px;">Subtraction</h2>
                   </div>
                       <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                       <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
@@ -89,11 +89,11 @@
                   </div> 
                   <div class="col-lg-4 col-md-4 col-12 video">
                     <div class="sub">
-                        <h2 class="level" style="margin-top:20px;">Multiplycation</h2>
+                        <h2 class="level" style="margin-top:20px;">Multiplication</h2>
                     </div>
                         <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                         <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                        <h2 class="level" style="margin-top:20px;">Data Handaling</h2>
+                        <h2 class="level" style="margin-top:20px;">Data Handling</h2>
                         <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                         <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
                     </div>        
