--- a/tool.html
+++ b/tool.html
@@ -84,10 +84,10 @@
                         <ul>
                             <a onclick="parent.open('https://drive.google.com/file/d/1lPCRR6d1pUu1BtAST6n_3p8qncFXRpMY/view')"><button class="button"><span>Shapes & Spaces</span></button></a>
                             <a onclick="parent.open('https://drive.google.com/file/d/1zkAo85B5muQtUcN7r7ppa6KoJ-s5MeUV/view')"><button class="button"><span>Addition</span></button></a>
-                            <a onclick="parent.open('https://drive.google.com/file/d/1H4ozrgUAtyHqDO3SQOcTa3OxWG_EIiI8/view')"><button class="button"><span>Substraction</span></button></a>
+                            <a onclick="parent.open('https://drive.google.com/file/d/1H4ozrgUAtyHqDO3SQOcTa3OxWG_EIiI8/view')"><button class="button"><span>Subtraction</span></button></a>
                             <a onclick="parent.open('https://drive.google.com/file/d/1euQ6PsNdcuzeulmzqUzDJgvpXMUAi4eH/view')"><button class="button"><span>Time</span></button></a>
                             <a onclick="parent.open('https://drive.google.com/file/d/13EXX_fX9ss0nMiU_EH2bi04N92kgwpUW/view')"><button class="button"><span>Measurement</span></button></a>
-                            <a onclick="parent.open('https://drive.google.com/file/d/1vD__IhbglkqEjLC4frZ26kKjWSJHl6aI/view')"><button class="button"><span>Data Handaling</span></button></a>
+                            <a onclick="parent.open('https://drive.google.com/file/d/1vD__IhbglkqEjLC4frZ26kKjWSJHl6aI/view')"><button class="button"><span>Data handling</span></button></a>
                             <a onclick="parent.open('https://drive.google.com/file/d/1fyCBevRwq68N4X8sl-mnudjLeKdwD8ga/view')"><button class="button"><span>Pattern</span></button></a>
                             <a onclick="parent.open('https://drive.google.com/file/d/1H4s82OuXhc4Ed0kcRquZpdnlShRnfL1E/view')"><button class="button"><span>Numbers</span></button></a>
                             <a onclick="parent.open('https://drive.google.com/file/d/16TFnejQEba0k2FlScm5xSQIJUPA5jiXn/view')"><button class="button"><span>Money</span></button></a>
