--- a/Gkvideo.html
+++ b/Gkvideo.html
@@ -46,7 +46,7 @@
         <header>
             <nav class="navbar navbar-expand-md naveffect" style="padding: 0px; font-weight: bold; font-family: monospace; font-size: 18px;">
                 <a class="navbar-brand" href="index.html" style="font-size:24px; margin-left: 50px;margin-top: 20px;"><img src="logo.png" style="padding-right: 20px;height:60px">S P A R K</a>
-                <button class="navbar-toggler bg-grey navbar-dark" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler bg-grey navbar-light" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
                 <div class="collapse navbar-collapse justify-content-end" style="padding-right: 50px;" id="navbarCollapse">
