Modified Carasouel style height

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <li data-target="#myCarousel" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
-                <div class="carousel-item active" style="height: 100vh;">
+                <div class="carousel-item active" style="height: 720px;">
                     <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
                     <div class="container">
                         <div class="carousel-caption text-left">
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item" style="height: 100vh;">
+                <div class="carousel-item" style="height: 720px;">
                     <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
                     <div class="container">
                         <div class="carousel-caption">
@@ -148,7 +148,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item" style="height: 100vh;">
+                <div class="carousel-item" style="height: 720px;">
                     <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
                     <div class="container">
                         <div class="carousel-caption text-left">
