--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active" style="height: 720px;">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
+                    <svg class="bd-placeholder-img" width="100%" height="100vh" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
                     <div class="container">
                         <div class="carousel-caption text-left">
                             <h1>Learning Facility</h1>
@@ -140,7 +140,7 @@
                     </div>
                 </div>
                 <div class="carousel-item" style="height: 720px;">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
+                    <svg class="bd-placeholder-img" width="100%" height="100vh" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
                     <div class="container">
                         <div class="carousel-caption">
                             <h1>Music Therapy</h1>
@@ -149,7 +149,7 @@
                     </div>
                 </div>
                 <div class="carousel-item" style="height: 720px;">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
+                    <svg class="bd-placeholder-img" width="100%" height="100vh" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
                     <div class="container">
                         <div class="carousel-caption text-left">
                             <h1>Interactive Quiz</h1>
