--- a/mathvideo.html
+++ b/mathvideo.html
@@ -71,31 +71,37 @@
                 <div class="sub">
                     <h2 class="level" style="margin-top:20px;">Addition</h2>
                 </div>
-                    <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                    <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                    <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/5aPahOD4ssk"></iframe>
+                    <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/Fe8u2I3vmHU"></iframe>
+                    <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/yyhjdQa1UM0"></iframe>
                     <h2 class="level" style="margin-top:20px;">Shapes & Space</h2>
-                    <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                    <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                    <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/ewQE6kHVAJw"></iframe>
+                    <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/gRuia1A-dLA"></iframe>
+                    <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/f4ZHdzl6ZWg"></iframe>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12 video">
                   <div class="sub">
                       <h2 class="level" style="margin-top:20px;">Subtraction</h2>
                   </div>
-                      <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                      <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                      <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/qM7B2nwpV1M"></iframe>
+                      <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/1jCqMKdBE5c"></iframe>
+                      <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/8mER6TmKJNc"></iframe>
                       <h2 class="level" style="margin-top:20px;">Measurement</h2>
-                      <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                      <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                      <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/ftB5VU64yGA"></iframe>
+                      <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/zsv7bYSrzMU"></iframe>
+                      <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/ety1QoxF1eY"></iframe>
                   </div> 
                   <div class="col-lg-4 col-md-4 col-12 video">
                     <div class="sub">
                         <h2 class="level" style="margin-top:20px;">Multiplication</h2>
                     </div>
-                        <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                        <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                        <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/eW2dRLyoyds"></iframe>
+                        <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/dPksJHBZs4Q"></iframe>
+                        <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/fZFwHpiAVE0"></iframe>
                         <h2 class="level" style="margin-top:20px;">Data Handling</h2>
-                        <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
-                        <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/a-5LdT9zHPM?autoplay=1"></iframe>
+                        <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/hKHgqqk4NbE"></iframe>
+                        <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/gQd6xPdzIic"></iframe>
+                        <iframe width="100%" height="308" frameborder="0" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/PLkMGNMaBQo"></iframe>
                     </div>        
             </div>
         </div>
